fix(dws): remove Objects/List.of usages for older JDK compatibility